# codex-test-1

./: .gitignore  README.md  config.example.yaml  index.html  manifest.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: update-ai-intel-daily.yml  update-options-scanner.yml
ai-intel-daily/: README.md  index.html  manifest.json  script.js  styles.css  sw.js
ai-intel-daily/archive/: 2026-05-18.json  (+44 more)
monthly-budget/: README.md  app.js  index.html  styles.css
options-credit-scanner/: README.md  index.html  info.html  manifest.json  scanner.py  script.js  styles.css
portfolio-command-center/: README.md  index.html  manifest.json  script.js  styles.css  sw.js
profit-allocator/: README.md  app.js  index.html  styles.css
scripts/: generate_ai_intel_feed.py  install-mac-autosync.sh  install-windows-autosync.ps1  install_ai_intel_daily_autoupdate.sh  install_trend_signal_lab_autoupdate.sh  run_radar.ps1  sync.ps1  sync.sh  update_ai_intel_daily.sh  update_trend_signal_lab.sh
sp500-value-dashboard/: README.md  index.html  package-lock.json  package.json  sp500_value_opportunities.py
sp500-value-finder/: README.md  app-fixes.js  index.html  manifest.json
src/: App.jsx
tests/: test_detection.py  test_market_data.py
trend-signal-lab/: script.js
trend-signal-lab-source/: index.html  script.js  styles.css
trend_research_app/: README.md  __init__.py  backtesting.py  cli.py  collectors.py  db.py  experiments.py  export_static_app.py  market_data.py  models.py  reporting.py  requirements.txt  seed.py  signals.py
(+49 files in other folders)
