[project]
name = "ai-beneficiary-stock-radar"
version = "0.1.0"
description = "AI Beneficiary Stock Early Warning System MVP"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.11",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.0",
    "pytest>=8.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "yfinance>=0.2.54",
    "pytrends>=4.9.2",
]

[project.scripts]
ai-stock-radar = "ai_stock_radar.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
